--- a/coderdojo/styles/index.css
+++ b/coderdojo/styles/index.css
@@ -147,3 +147,7 @@ body>section:nth-of-type(8) h2:before {
 body>section:nth-of-type(9) h2:before {
     content: var(--emoticon-09);
 }
+
+body>section:nth-of-type(10) h2:before {
+    content: var(--emoticon-10);
+}
